--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </div>
         <div class="menuContainer">
           <ul>
-            <li><a href="./foodpandaClone.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./newsroom.html">Newsroom</a></li>
             <li><a href="#">panda ads</a></li>
