--- a/newsroom.html
+++ b/newsroom.html
@@ -28,7 +28,7 @@
         </div>
         <div class="menuContainer">
           <ul>
-            <li><a href="./foodpandaClone.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li class="active"><a href="#">Newsroom</a></li>
             <li><a href="#">panda ads</a></li>
